k8s/00-namespace-config.yaml
# 네임스페이스
apiVersion: v1
kind: Namespace
metadata:
  name: wkms
